# es-trading-dashboard

./: ARCHITECTURE.md  DATA_CATALOG.md  README.md  SPEC_LOCK.md  pyproject.toml  run_dashboard_FINAL_FREEZE.py
src/es_trading_dashboard/: __init__.py
src/es_trading_dashboard/core/: __init__.py  config.py  connection.py  exceptions.py
