[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "es-trading-dashboard"
version = "0.1.0"
description = "Real-time ES/SPX options trading dashboard with Interactive Brokers integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["trading", "options", "interactive-brokers", "dashboard", "dash"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "ib_insync>=0.9.86",
    "dash>=2.14.0",
    "dash-bootstrap-components>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "plotly>=5.18.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.2",
    "pytz>=2024.1",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[project.scripts]
es-dashboard = "es_trading_dashboard.ui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/es_trading_dashboard"]

[tool.black]
line-length = 88
target-version = ["py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
